<resources>
    <string name="app_name">Near Field Playlist</string>
    <string name="warning_need_token">You need to request an access token first</string>
    <string name="code">Code: %1$s</string>
    <string name="token">Access Token: %1$s</string>
    <string name="login_message">Logging In To Spotify</string>
    <string name="login_submessage_placeholder">Login Sub-Message</string>
    <string name="album_cover_content_description">Album Cover</string>
    <string name="track_name_placeholder">Track Name</string>
    <string name="artist_album_placeholder">Artist Name • Album Name</string>
    <string name="artist_album_format">%1$s • %2$s</string>
    <string name="send_button_text">Send</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="select_track_message">Select a track to send</string>
    <string name="play_pause_button_content_description">Play/Pause Button</string>
    <string name="skip_button_content_description">Skip Button</string>
    <string name="nothing_playing_message">Nothing Playing</string>
    <string name="nfp_logo_content_description">NFP Logo</string>
    <string name="item_status_symbol_content_description">Item Status Symbol</string>
    <string name="action_search_text">Search Spotify</string>
    <string name="action_host_text">Host</string>
    <string name="host_listening_message">Listening for Song Requests</string>
    <string name="host_mode_title">Host Mode</string>
    <string name="nfc_message_text">Hold your device against the back of a device in Host mode</string>
    <string name="nfc_success_text">Song Sent!</string>
    <string name="login_error_message">Error logging into Spotify.</string>
    <string name="nfc_required_message">This App Requires NFC</string>
    <string name="nfc_required_sub_message">Turn on NFC radio and restart this app, or try another device.</string>
    <string name="nfc_receive_error_msg">Error receiving NFC data</string>
    <string name="user_id_error_msg">Error receiving user ID</string>
    <string name="playlists_error_msg">Error retrieving user\'s playlists.</string>
    <string name="add_to_playlist_error_msg">Error adding track to playlist.</string>
    <string name="add_to_playlist_success_msg">Song added to playlist!</string>
    <string name="playlist_creation_error_msg">Error creating \'NFP Playlist\'</string>
</resources>
