<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/nfp_logo"
        app:srcCompat="@drawable/nfp_logo_alpha"
        android:contentDescription="@string/nfp_logo_content_description"
        android:layout_width="145dip"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dip"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/host_mode_text"
        android:text="@string/host_mode_title"
        android:textAppearance="@style/HostModeTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nfp_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/host_mode_message"
        android:text="@string/host_listening_message"
        android:textAppearance="@style/HostModeSubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dip" />

</RelativeLayout>