<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:background="@color/colorNormalBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_album_cover"
        app:srcCompat="@drawable/album_art_placeholder"
        android:contentDescription="@string/album_cover_content_description"
        android:layout_width="64dip"
        android:layout_height="64dip"
        android:layout_margin="5dip"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/item_info_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_album_cover"
        android:layout_toStartOf="@+id/item_status_symbol"
        android:layout_marginEnd="16dip"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dip">

        <TextView
            android:id="@+id/item_track_title"
            android:textAppearance="@style/TrackTitleTextNormal"
            android:text="@string/track_name_placeholder"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/item_artist_album"
            android:textAppearance="@style/TrackArtistAlbumTextNormal"
            android:text="@string/artist_album_placeholder"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_track_title" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/item_status_symbol"
        android:tint="@color/colorNormalForeground"
        app:srcCompat="@drawable/ic_add_black_30dp"
        android:contentDescription="@string/item_status_symbol_content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="15dip" />

</RelativeLayout>