<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.wwu.helesa.nfp.HostActivity"
    android:id="@+id/activity_host"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/track_list"
        style="@style/ListViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/now_playing_area"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/now_playing_area"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/now_playing_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/item_album_cover"
                app:srcCompat="@drawable/album_art_placeholder"
                android:contentDescription="@string/album_cover_content_description"
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:layout_margin="10dip" />

            <RelativeLayout
                android:id="@+id/item_info_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/item_album_cover"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dip">

                <TextView
                    android:id="@+id/item_track_title"
                    android:textAppearance="@style/TrackTitleTextNormal"
                    android:text="@string/track_name_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/item_artist_album"
                    android:textAppearance="@style/TrackArtistAlbumTextNormal"
                    android:text="@string/artist_album_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_track_title" />

            </RelativeLayout>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/play_pause_button"
            style="@style/TransportControlsStyle"
            app:srcCompat="@drawable/ic_play_circle_outline_black_48dp"
            android:contentDescription="@string/play_pause_button_content_description"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_toStartOf="@+id/skip_button"
            android:elevation="5dp"
            android:layout_centerInParent="true"
            android:tint="@color/colorForeground" />

        <ImageButton
            android:id="@+id/skip_button"
            style="@style/TransportControlsStyle"
            app:srcCompat="@drawable/ic_skip_next_black_48dp"
            android:contentDescription="@string/skip_button_content_description"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:elevation="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dip"
            android:tint="@color/colorForeground" />

        <TextView
            android:id="@+id/nothing_playing_message"
            android:textAppearance="@style/MutedMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dip"
            android:text="@string/nothing_playing_message"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
